exclude tcl.ui.test from profile, document upgrade status